2002-07-01  Darin Adler  <darin@apple.com>

	Ken fixed the load message sequencing problem in WebFoundation, so now we can
	go back to the original versions of the asserts.

        * WebCoreSupport.subproj/IFResourceURLHandleClient.m:
        (-[IFResourceURLHandleClient dealloc]):
        (-[IFResourceURLHandleClient IFURLHandleResourceDidCancelLoading:]):
        (-[IFResourceURLHandleClient IFURLHandle:resourceDidFailLoadingWithResult:]):
        * WebView.subproj/IFMainURLHandleClient.mm:
        (-[IFMainURLHandleClient dealloc]):
        (-[IFMainURLHandleClient IFURLHandleResourceDidCancelLoading:]):
	Roll out the stuff that's ifdef'd and marked with bug 2954901.

2002-07-01  Darin Adler  <darin@apple.com>

        * WebView.subproj/IFDynamicScrollBarsView.m:
        (-[IFDynamicScrollBarsView updateScrollers]): After a closer reading of
	the NSScrollView source code, I see that we don't need to explicitly do
	tile or setNeedsDisplay: because the setters take care of that, so I made
	this simpler.
        (-[IFDynamicScrollBarsView reflectScrolledClipView:]): Replace the anti-
	recursion hack that I erroneously removed earlier.

        * WebView.subproj/IFTextView.h: Removed the isRTF flag.
        * WebView.subproj/IFTextView.m:
        (-[IFTextView provisionalDataSourceChanged:]): Do nothing here.
        (-[IFTextView dataSourceUpdated:]): Check the MIME type here.

2002-07-01  Richard Williamson  <rjw@apple.com>

        Fixed 2976913.
         
        * WebView.subproj/IFHTMLView.mm:
        (-[IFHTMLView layout]):
        Augmented debugging info.
        (-[IFHTMLView setNeedsDisplay:]):
        Augmented debugging info.
        (-[IFHTMLView setNeedsLayout:]):
        Removed overload of this method to also set display flag.
        Why was this added?
        (-[IFHTMLView setNeedsToApplyStyles:]):
        Augmented debugging info.
        (-[IFHTMLView drawRect:]):
        Augmented debugging info.